<?xml version="1.0"?>
<package format="2">
  <name>motion_controller</name>
  <version>1.0.0</version>
  <description>This package controls the motion behaviour a differential wheeled robot</description>

  <maintainer email="rgoulartns@gmail.com">Rafael Goulart</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>curtis_interface</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
